--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+application.mail.lateloans.message=Hey there! You have a late loan!
+application.mail.default-remetent=mail@library-api.com
 
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=788099c48705f2
+spring.mail.password=8eb3c5a5fad5d0
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
