--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.mail.password=8eb3c5a5fad5d0
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+management.endpoints.web.exposure.include=*
+
+logging.file.name=appfile.log
